Update SheltersMap.scss for responsive styling adjustments and button color change, fixed popup mobile display responsiveness issue, adjusted GoHere point to help with sizing on smaller devices

--- a/client/src/components/SheltersMap/SheltersMap.scss
+++ b/client/src/components/SheltersMap/SheltersMap.scss
@@ -47,7 +47,7 @@
       // width: max-content;
       height: fit-content;
       align-items: start;
-      zoom: 0.7;
+      zoom: 0.89;
     }
 
     @include tablet {
@@ -64,7 +64,7 @@
       color: ghostwhite;
       font-family: Verdana;
       color: white;
-      width: 9rem;
+      width: 10rem;
     }
 
     &-subheader-2 {
@@ -93,17 +93,17 @@
     }
   }
 
-  &__div-top {
+  &__div-left {
     // height: 3rem;
     animation: fadeIn 0.5s ease-out forwards;
-    width: 9rem;
+    width: 10rem;
     align-self: center;
     // margin: 0.7rem;
   }
 
-  &__div-bottom {
+  &__div-right {
     min-height: auto;
-    width: 7rem;
+    width: 100%;
     height: auto;
 
     animation: fadeIn 0.5s ease-out forwards;
@@ -115,8 +115,14 @@
 
 .popup-availability {
   color: #d66853;
-  font-size: 1.1rem;
+  font-size: 1.28rem;
   margin-left: 0.4rem;
+  font-family: Avenir Next Bold;
+}
+
+.popup__button-container {
+  width: 100%;
+  justify-content: center;
 }
 
 .popup__button-directions {
@@ -131,10 +137,8 @@
   background-color: #232f27;
   cursor: pointer;
   width: 100%;
+  text-align: -webkit-center;
 
-  @include mobile {
-    padding: 0.5rem 1rem;
-  }
   &:hover {
     border: 1px solid white;
     background-color: #2f4066;
@@ -146,7 +150,7 @@
 .popup__button-directions-text {
   font-family: 'Avenir Next';
   font-size: 1rem;
-  width: 5rem;
+  width: 8rem;
 }
 
 .directions-icon {
@@ -205,23 +209,18 @@
   animation: fadeIn 0.5s ease-out forwards;
   background-color: #4c4c47;
   backdrop-filter: blur(18.5px);
-  // border-left: 25px solid #232323;
-  // border-left: 25px solid #353333;
   border-radius: 10px;
   box-shadow: 0 0 14px 5px #999999;
   display: flex;
   flex-direction: column;
   font-variant-caps: all-petite-caps;
-  border-left: 25px solid #d66853;
+  border-left: 20px solid #d66853;
   background: #212d40;
   align-self: center;
 
   @include mobile {
     line-height: 1rem;
-    padding: 0.7rem 1rem 0.7rem 0.5rem;
-    width: 100%;
-    // height: 8rem;
-    width: fit-content;
+    width: 19rem;
   }
 
   @include tablet {
